@@ -4,8 +4,10 @@ kbd-chooser (0.41) UNRELEASED; urgency=low
     - Applied patches for sun keyboard map.  (Closes: #227852)
       (Thanks to Thomas Poindessous <thomas@poindessous.com>)
   * Eugen Meshcheryakov : added Ukrainian translation (uk.po)
+  * Alastair McKinstry
+    - usb-kbd.c: Autodetect USB keyboard using devices file. Closes: #220137.
 
- -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:37 +0100
+ -- Alastair McKinstry <mckinstry@debian.org>  Sun, 15 Feb 2004 20:52:30 +0000
 
 kbd-chooser (0.40) unstable; urgency=low
 
